[package]
name = "musicbot-registry"
version = "0.1.0"
authors = ["Felix Gail <felix.clemens.gail@gmail.com>"]
description = "Keeps a registry of active Musicbots (https://github.com/BjoernPetersen/MusicBot) on your public ip"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_cors = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
multimap = "0.8.1"
log = { version = "0.4.8", features = ["max_level_debug", "release_max_level_warn"]}
simplelog = "0.7.6"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
