[package]
name = "musicbot-registry"
version = "0.2.0"
authors = ["Felix Gail <felix.clemens.gail@gmail.com>"]
description = "Keeps a registry of active Musicbots (https://github.com/BjoernPetersen/MusicBot) on your public ip"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_cors = "0.5.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
multimap = "0.8.2"
log = { version = "0.4.11", features = ["max_level_debug", "release_max_level_warn"]}
simplelog = "0.8.0"
hyper = "0.14.19"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]
